--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,3 +1,7 @@
+main {
+  overflow: hidden;
+}
+
 h1 {
   font-size: 44px;
 }
@@ -55,20 +59,60 @@ p {
   font-size: 20px;
 }
 
+.fs-18 {
+  font-size: 18px;
+}
+
 .fs-17 {
   font-size: 17px;
 }
 
 .fs-16 {
-  font-size: 18px;
+  font-size: 16px;
 }
 
-.fs-18 {
-  font-size: 18px;
+.fs-14 {
+  font-size: 14px;
 }
 
 .fs-12 {
   font-size: 12px;
+}
+
+@media screen and (max-width: 1366px) {
+  .fs-1366-24 {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .fs-1366-18 {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .fs-1366-16 {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .fs-1366-14 {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .fs-1366-12 {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .fs-991-20 {
+    font-size: 20px;
+  }
 }
 
 .fw-500 {
@@ -91,6 +135,29 @@ p {
   line-height: 28px;
 }
 
+@media screen and (max-width: 1366px) {
+  .lh-1366-22 {
+    line-height: 22px;
+  }
+}
+
+@media screen and (min-width: 1367px) {
+  .px-1367-6 {
+    padding-left: 7rem !important;
+    padding-right: 7rem !important;
+  }
+}
+
+.ls-minus-p5 {
+  letter-spacing: -0.5px;
+}
+
+@media screen and (max-width: 1366px) {
+  .w-1366-88 {
+    width: 88px;
+  }
+}
+
 #dark-overlay {
   position: fixed;
   top: 0;
@@ -107,10 +174,19 @@ hr {
 
 div.shadowy {
   border: none;
-  width: 100%;
+  width: 200%;
   height: 1px;
   -webkit-box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1);
           box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1);
+  margin-left: -10rem;
+}
+
+@media screen and (max-width: 767px) {
+  div.shadowy {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    border-bottom: 1px solid #e6e7e8;
+  }
 }
 
 .text-underline {
@@ -760,6 +836,12 @@ div.shadowy {
   width: 100px;
 }
 
+@media screen and (max-width: 1366px) {
+  .btn.w-80px {
+    width: 80px;
+  }
+}
+
 .btn.btn-bg-light {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#fff));
   background-image: linear-gradient(to bottom, #f2f2f2, #fff);
@@ -825,13 +907,19 @@ div.shadowy {
   border-color: #ffc32c;
 }
 
+.custom-form-control input,
+.custom-form-control select,
+.custom-form-control label {
+  font-size: 16px;
+}
+
 .custom-form-control h4 {
   font-size: 14px;
   margin-bottom: 0.75rem;
 }
 
 .custom-form-control.empty {
-  height: 35px;
+  height: 40px;
 }
 
 .custom-form-control a {
@@ -894,13 +982,13 @@ input.custom-input.active, input.custom-input:focus {
   position: relative;
   display: inline-block;
   padding-left: 1.5rem;
-  padding-right: 1.75rem;
+  padding-right: 1.5rem;
   cursor: pointer;
   font-size: 16px;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .custom-radio,
@@ -1287,16 +1375,48 @@ input.custom-input.active, input.custom-input:focus {
   padding-top: 4rem;
 }
 
+@media screen and (max-width: 992px) {
+  #sidenav-container > * {
+    padding-top: 1rem;
+  }
+}
+
 #sidenav-container #sidenav {
   height: 100vh;
   width: 20%;
   background-color: #fafbfc;
+  padding-left: 4vw;
+  padding-right: 1rem;
+}
+
+@media screen and (max-width: 1366px) {
+  #sidenav-container #sidenav {
+    padding-left: 2.5vw;
+  }
+}
+
+@media screen and (max-width: 1160px) {
+  #sidenav-container #sidenav {
+    padding-left: 2vw;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  #sidenav-container #sidenav {
+    display: none;
+  }
 }
 
 #sidenav-container #sidenav .logo {
   display: block;
   padding-top: 0.75rem;
-  text-align: center;
+  padding-left: 40px;
+}
+
+@media screen and (max-width: 1366px) {
+  #sidenav-container #sidenav .logo img {
+    width: 88.4px;
+  }
 }
 
 #sidenav-container #sidenav .nav-item {
@@ -1307,7 +1427,6 @@ input.custom-input.active, input.custom-input:focus {
       -ms-flex-align: center;
           align-items: center;
   padding: 1rem 0;
-  padding-left: 5rem;
   -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
 }
@@ -1347,6 +1466,24 @@ input.custom-input.active, input.custom-input:focus {
 
 #sidenav-container #sidenav-right-content {
   width: 80%;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+@media screen and (max-width: 991px) {
+  #sidenav-container #sidenav-right-content {
+    width: 100%;
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  #sidenav-container #sidenav-right-content {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 #sidenav-container #sidenav-right-content section {
@@ -1379,12 +1516,11 @@ input.custom-input.active, input.custom-input:focus {
 .dropdown-content {
   display: none;
   position: absolute;
-  right: -3rem;
+  right: 0;
   top: 3rem;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  -webkit-box-shadow: 0px 0px 25px #b2b2b2;
-          box-shadow: 0px 0px 25px #b2b2b2;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 25px #b2b2b273;
+          box-shadow: 0px 0px 25px #b2b2b273;
   border-radius: 10px;
   z-index: 1;
   width: 384px;
