--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1,5 +1,9 @@
 @import "./_constants.scss";
 
+main {
+  overflow: hidden;
+}
+
 h1 {
   font-size: 44px;
 
@@ -51,20 +55,60 @@ p {
   font-size: 20px;
 }
 
+.fs-18 {
+  font-size: 18px;
+}
+
 .fs-17 {
   font-size: 17px;
 }
 
 .fs-16 {
-  font-size: 18px;
+  font-size: 16px;
 }
 
-.fs-18 {
-  font-size: 18px;
+.fs-14 {
+  font-size: 14px;
 }
 
 .fs-12 {
   font-size: 12px;
+}
+
+.fs-1366-24 {
+  @media screen and (max-width: 1366px) {
+    font-size: 24px;
+  }
+}
+
+.fs-1366-18 {
+  @media screen and (max-width: 1366px) {
+    font-size: 18px;
+  }
+}
+
+.fs-1366-16 {
+  @media screen and (max-width: 1366px) {
+    font-size: 16px;
+  }
+}
+
+.fs-1366-14 {
+  @media screen and (max-width: 1366px) {
+    font-size: 14px;
+  }
+}
+
+.fs-1366-12 {
+  @media screen and (max-width: 1366px) {
+    font-size: 12px;
+  }
+}
+
+.fs-991-20 {
+  @media screen and (max-width: 1366px) {
+    font-size: 20px;
+  }
 }
 
 .fw-500 {
@@ -87,6 +131,29 @@ p {
   line-height: 28px;
 }
 
+.lh-1366-22 {
+  @media screen and (max-width: 1366px) {
+    line-height: 22px;
+  }
+}
+
+.px-1367-6 {
+  @media screen and (min-width: 1367px) {
+    padding-left: 7rem !important;
+    padding-right: 7rem !important;
+  }
+}
+
+.ls-minus-p5 {
+  letter-spacing: -0.5px;
+}
+
+.w-1366-88 {
+  @media screen and (max-width: 1366px) {
+    width: 88px;
+  }
+}
+
 #dark-overlay {
   position: fixed;
   top: 0;
@@ -103,9 +170,15 @@ hr {
 
 div.shadowy {
   border: none;
-  width: 100%;
+  width: 200%;
   height: 1px;
   box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1);
+  margin-left: -10rem;
+
+  @media screen and (max-width: 767px) {
+    box-shadow: none;
+    border-bottom: 1px solid $color30;
+  }
 }
 
 .text-underline {
@@ -670,6 +743,12 @@ div.shadowy {
     width: 100px;
   }
 
+  &.w-80px {
+    @media screen and (max-width: 1366px) {
+      width: 80px;
+    }
+  }
+
   &.btn-bg-light {
     background-image: linear-gradient(to bottom, $color17, #fff);
     color: $color3;
@@ -736,13 +815,19 @@ div.shadowy {
 ////////////////////////////////////////////////////// CUSTOM FORM CONTROLS   ////////////////////////////////////////////////////////
 
 .custom-form-control {
+  input,
+  select,
+  label {
+    font-size: 16px;
+  }
+
   h4 {
     font-size: 14px;
     margin-bottom: 0.75rem;
   }
 
   &.empty {
-    height: 35px;
+    height: 40px;
   }
 
   a {
@@ -794,12 +879,9 @@ input.custom-input {
   position: relative;
   display: inline-block;
   padding-left: 1.5rem;
-  padding-right: 1.75rem;
+  padding-right: 1.5rem;
   cursor: pointer;
   font-size: 16px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
 
   &,
@@ -1175,24 +1257,47 @@ input.custom-input {
 
   & > * {
     padding-top: 4rem;
+
+    @media screen and (max-width: 992px) {
+      padding-top: 1rem;
+    }
   }
 
   #sidenav {
     height: 100vh;
     width: 20%;
     background-color: $color26;
+    padding-left: 4vw;
+    padding-right: 1rem;
+
+    @media screen and (max-width: 1366px) {
+      padding-left: 2.5vw;
+    }
+
+    @media screen and (max-width: 1160px) {
+      padding-left: 2vw;
+    }
+
+    @media screen and (max-width: 991px) {
+      display: none;
+    }
 
     .logo {
       display: block;
       padding-top: 0.75rem;
-      text-align: center;
+      padding-left: 40px;
+
+      @media screen and (max-width: 1366px) {
+        img {
+          width: 88.4px;
+        }
+      }
     }
 
     .nav-item {
       display: flex;
       align-items: center;
       padding: 1rem 0;
-      padding-left: 5rem;
       transition: 0.4s ease;
 
       * {
@@ -1232,6 +1337,20 @@ input.custom-input {
 
   #sidenav-right-content {
     width: 80%;
+    padding-left: 5rem;
+    padding-right: 5rem;
+
+    @media screen and (max-width: 991px) {
+      width: 100%;
+      padding-left: 1.75rem;
+      padding-right: 1.75rem;
+    }
+
+    @media screen and (max-width: 575px) {
+      width: 100%;
+      padding-left: 0;
+      padding-right: 0;
+    }
 
     section {
       max-width: 1276px;
@@ -1265,11 +1384,10 @@ input.custom-input {
 .dropdown-content {
   display: none;
   position: absolute;
-  right: -3rem;
+  right: 0;
   top: 3rem;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 0px 25px $color3;
+  background-color: #fff;
+  box-shadow: 0px 0px 25px #b2b2b273;
   border-radius: 10px;
   z-index: 1;
   width: 384px;
